--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 atomic-wait = "1.1.0"
 mmapcell = "0.1.2"
+parking_lot = "0.12.3"
+tracing = "0.1.40"
 
 [dev-dependencies]
 rand = "0.8.5"
+tracing-subscriber = "0.3.18"
