--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,17 @@
 name = "disk-mpmc"
 version = "0.1.0"
 edition = "2021"
+authors = ["Maxi Saparov <maxi.saparov@gmail.com>"]
+description = "on-disk mpmc"
+documentation = "https://docs.rs/disk-mpmc"
+homepage = "https://github.com/MostlyMaxi/disk-mpmc"
+repository = "https://github.com/MostlyMaxi/disk-mpmc"
+readme = "README.md"
+keywords = ["ringbuffer", "queue"]
+license = "MIT"
+categories = ["database-implementations", "data-structures"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 
 [dependencies]
 atomic-wait = "1.1.0"
