--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["database-implementations", "data-structures"]
 
 [dependencies]
 atomic-wait = "1.1.0"
+linux-futex = "1.0.0"
 mmapcell = "0.1.2"
 parking_lot = "0.12.3"
 tracing = "0.1.40"
