--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "disk-mpmc"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 authors = ["Maxi Saparov <maxi.saparov@gmail.com>"]
 description = "on-disk mpmc"
@@ -15,7 +15,7 @@ categories = ["database-implementations", "data-structures"]
 
 
 [dependencies]
-atomic-wait = "1.1.0"
+const-str = "0.5.7"
 linux-futex = "1.0.0"
 mmapcell = "0.1.2"
 parking_lot = "0.12.3"
