--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ categories = ["database-implementations", "data-structures"]
 
 
 [dependencies]
+atomic-wait = "1.1.0"
 const-str = "0.5.7"
-linux-futex = "1.0.0"
 mmapcell = "0.1.2"
 parking_lot = "0.12.3"
-tracing = "0.1.40"
 
 [dev-dependencies]
 rand = "0.8.5"
 tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
